--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=dental-forecast-users-microservice
 
-spring.datasource.url=jdbc:postgresql://34.89.212.72:5432/DentalForecast
+spring.datasource.url=jdbc:postgresql://34.89.212.72:5432/DentalForecast?cloudSqlInstance=dental-forecasting:europe-west3:dental-forecast-prod&socketFactory=com.google.cloud.sql.postgres.SocketFactory
 spring.datasource.username=postgres
 spring.datasource.password=adminadmin
 
